--- a/index.html
+++ b/index.html
@@ -5,14 +5,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
   <title>Select</title>
 </head>
 
 <body>
 
 
- 
+<div class="container">
 
+  <div class="app">
+    <div class="wrap">
+      <div class="select open">
+        <div class="select__input">
+          <span>Text</span>
+          <i class="fas fa-chevron-down"></i>
+        </div>
+        <div class="select__dropdown">
+          <ul class="select__list">
+            <li class="select__list-item">4</li>
+            <li class="select__list-item">3</li>
+            <li class="select__list-item">2</li>
+            <li class="select__list-item">2</li>
+            <li class="select__list-item">1</li>
+          </ul>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+
+</div>
+ 
+ 
 
 
 <script src="index.js"></script>
