--- a/index.html
+++ b/index.html
@@ -13,29 +13,11 @@
 
 
 <div class="container">
-
   <div class="app">
     <div class="wrap">
-      <div class="select open">
-        <div class="select__input">
-          <span>Text</span>
-          <i class="fas fa-chevron-down"></i>
-        </div>
-        <div class="select__dropdown">
-          <ul class="select__list">
-            <li class="select__list-item">4</li>
-            <li class="select__list-item">3</li>
-            <li class="select__list-item">2</li>
-            <li class="select__list-item">2</li>
-            <li class="select__list-item">1</li>
-          </ul>
-        </div>
-      </div>
-
-
+      <div id="select"></div>
     </div>
   </div>
-
 </div>
  
  
